crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-on_zero_results_tpch_simple_q7_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q7"
---
+---------------+-----------------------------------------------------------------------+
| plan_type     | plan                                                                  |
+---------------+-----------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                      |
|               |   Projection: orders.o_orderkey AS key                                |
|               |     Limit: skip=0, fetch=10                                           |
|               |       TableScan: orders projection=[o_orderkey], fetch=10             |
| physical_plan | ProjectionExec: expr=[o_orderkey@0 as key]                            |
|               |   GlobalLimitExec: skip=0, fetch=10                                   |
|               |     SchemaCastScanExec                                                |
|               |       FallbackOnZeroResultsScanExec                                   |
|               |         CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0 |
|               |           BytesProcessedExec                                          |
|               |             EmptyExec                                                 |
|               |                                                                       |
+---------------+-----------------------------------------------------------------------+
